welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: Missing closing brace `}' assumed here
def move(nbPas : Int,versLavant : Boolean)
^Program:2: error: expected class or object definition
def move(nbPas : Int,versLavant : Boolean)
^Program:3: error: expected class or object definition
{if (versLavant)
^